# indexs

./: .gitignore  CMakeLists.txt  README.md  base.cmake
3rd/: CMakeLists.txt
index/: CMakeLists.txt  bigram.cpp  bigram.h  index.cpp  index.h  test.cpp
ngram/: CMakeLists.txt  bigram.cpp  idxdbi.cpp  idxdbi.h  test.cpp
query/: CMakeLists.txt  query.cpp  query.h  test.cpp
